--- a/code/backend/requirements.txt
+++ b/code/backend/requirements.txt
@@ -1,8 +1,11 @@
 flask==2.0.1
 flask-cors==3.0.10
-web3==5.24.0
+web3>=6.0.0
 python-dotenv==0.19.0
-pandas==1.3.3
+pandas>=2.0.0
 xgboost==1.4.2
 joblib==1.0.1
 gunicorn==20.1.0
+pytest
+Werkzeug==2.0.3
+
