--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,13 +3,13 @@ repos:
     rev: 25.11.0
     hooks:
       - id: black
-        args: ["--line-length=88"]
+        args: ['--line-length=88']
 
   - repo: https://github.com/pycqa/isort
     rev: 7.0.0
     hooks:
       - id: isort
-        args: ["--profile", "black"]
+        args: ['--profile', 'black']
 
   - repo: https://github.com/pycqa/flake8
     rev: 7.3.0
@@ -17,7 +17,7 @@ repos:
       - id: flake8
         additional_dependencies:
           - flake8-bugbear
-        args: ["--max-line-length=88"]
+        args: ['--max-line-length=88']
 
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v6.0.0
