--- a/infrastructure/ansible/roles/common/tasks/main.yml
+++ b/infrastructure/ansible/roles/common/tasks/main.yml
@@ -25,7 +25,7 @@
 
 - name: Configure firewall
   firewalld:
-    service: "{{ item }}"
+    service: '{{ item }}'
     permanent: yes
     state: enabled
   loop:
