--- a/infrastructure/ci-cd/terraform-ci.yml
+++ b/infrastructure/ci-cd/terraform-ci.yml
@@ -2,11 +2,11 @@ name: Terraform CI/CD
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [main, develop]
     paths:
       - 'infrastructure/terraform/**'
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
       - 'infrastructure/terraform/**'
 
@@ -19,49 +19,49 @@ jobs:
     name: Terraform Validate
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: ${{ env.TF_VERSION }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
 
-    - name: Terraform Format Check
-      run: terraform fmt -check -recursive infrastructure/terraform/
+      - name: Terraform Format Check
+        run: terraform fmt -check -recursive infrastructure/terraform/
 
-    - name: Terraform Init
-      run: |
-        cd infrastructure/terraform
-        terraform init -backend=false
+      - name: Terraform Init
+        run: |
+          cd infrastructure/terraform
+          terraform init -backend=false
 
-    - name: Terraform Validate
-      run: |
-        cd infrastructure/terraform
-        terraform validate
+      - name: Terraform Validate
+        run: |
+          cd infrastructure/terraform
+          terraform validate
 
   security-scan:
     name: Security Scan
     runs-on: ubuntu-latest
     needs: terraform-validate
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Run Checkov
-      id: checkov
-      uses: bridgecrewio/checkov-action@master
-      with:
-        directory: infrastructure/terraform/
-        framework: terraform
-        output_format: sarif
-        output_file_path: reports/results.sarif
+      - name: Run Checkov
+        id: checkov
+        uses: bridgecrewio/checkov-action@master
+        with:
+          directory: infrastructure/terraform/
+          framework: terraform
+          output_format: sarif
+          output_file_path: reports/results.sarif
 
-    - name: Upload Checkov results to GitHub Security
-      uses: github/codeql-action/upload-sarif@v2
-      if: always()
-      with:
-        sarif_file: reports/results.sarif
+      - name: Upload Checkov results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v2
+        if: always()
+        with:
+          sarif_file: reports/results.sarif
 
   terraform-plan:
     name: Terraform Plan
@@ -72,36 +72,36 @@ jobs:
       matrix:
         environment: [dev, staging]
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: ${{ env.TF_VERSION }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-    - name: Terraform Init
-      run: |
-        cd infrastructure/terraform
-        terraform init
+      - name: Terraform Init
+        run: |
+          cd infrastructure/terraform
+          terraform init
 
-    - name: Terraform Plan
-      run: |
-        cd infrastructure/terraform
-        terraform plan -var-file="environments/${{ matrix.environment }}/terraform.tfvars" -out=tfplan-${{ matrix.environment }}
+      - name: Terraform Plan
+        run: |
+          cd infrastructure/terraform
+          terraform plan -var-file="environments/${{ matrix.environment }}/terraform.tfvars" -out=tfplan-${{ matrix.environment }}
 
-    - name: Upload Plan Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: tfplan-${{ matrix.environment }}
-        path: infrastructure/terraform/tfplan-${{ matrix.environment }}
+      - name: Upload Plan Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: tfplan-${{ matrix.environment }}
+          path: infrastructure/terraform/tfplan-${{ matrix.environment }}
 
   terraform-apply:
     name: Terraform Apply
@@ -113,30 +113,30 @@ jobs:
         environment: [dev, staging]
     environment: ${{ matrix.environment }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: ${{ env.TF_VERSION }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
 
-    - name: Terraform Init
-      run: |
-        cd infrastructure/terraform
-        terraform init
+      - name: Terraform Init
+        run: |
+          cd infrastructure/terraform
+          terraform init
 
-    - name: Terraform Apply
-      run: |
-        cd infrastructure/terraform
-        terraform apply -var-file="environments/${{ matrix.environment }}/terraform.tfvars" -auto-approve
+      - name: Terraform Apply
+        run: |
+          cd infrastructure/terraform
+          terraform apply -var-file="environments/${{ matrix.environment }}/terraform.tfvars" -auto-approve
 
   terraform-apply-prod:
     name: Terraform Apply Production
@@ -145,40 +145,40 @@ jobs:
     if: github.ref == 'refs/heads/main' && github.event_name == 'push'
     environment: production
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: ${{ env.TF_VERSION }}
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ env.TF_VERSION }}
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
-        aws-region: ${{ env.AWS_REGION }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
+          aws-region: ${{ env.AWS_REGION }}
 
-    - name: Terraform Init
-      run: |
-        cd infrastructure/terraform
-        terraform init
+      - name: Terraform Init
+        run: |
+          cd infrastructure/terraform
+          terraform init
 
-    - name: Terraform Plan
-      run: |
-        cd infrastructure/terraform
-        terraform plan -var-file="environments/prod/terraform.tfvars" -out=tfplan-prod
+      - name: Terraform Plan
+        run: |
+          cd infrastructure/terraform
+          terraform plan -var-file="environments/prod/terraform.tfvars" -out=tfplan-prod
 
-    - name: Manual Approval Required
-      uses: trstringer/manual-approval@v1
-      with:
-        secret: ${{ github.TOKEN }}
-        approvers: devops-team
-        minimum-approvals: 2
-        issue-title: "Production Terraform Deployment Approval"
+      - name: Manual Approval Required
+        uses: trstringer/manual-approval@v1
+        with:
+          secret: ${{ github.TOKEN }}
+          approvers: devops-team
+          minimum-approvals: 2
+          issue-title: 'Production Terraform Deployment Approval'
 
-    - name: Terraform Apply
-      run: |
-        cd infrastructure/terraform
-        terraform apply tfplan-prod
+      - name: Terraform Apply
+        run: |
+          cd infrastructure/terraform
+          terraform apply tfplan-prod
