--- a/infrastructure/kubernetes/base/service-account.yaml
+++ b/infrastructure/kubernetes/base/service-account.yaml
@@ -12,15 +12,15 @@ metadata:
   namespace: default
   name: blockscore-role
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: ["get", "watch", "list"]
-- apiGroups: [""]
-  resources: ["configmaps"]
-  verbs: ["get", "watch", "list"]
-- apiGroups: [""]
-  resources: ["secrets"]
-  verbs: ["get", "watch", "list"]
+  - apiGroups: ['']
+    resources: ['pods']
+    verbs: ['get', 'watch', 'list']
+  - apiGroups: ['']
+    resources: ['configmaps']
+    verbs: ['get', 'watch', 'list']
+  - apiGroups: ['']
+    resources: ['secrets']
+    verbs: ['get', 'watch', 'list']
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -28,9 +28,9 @@ metadata:
   name: blockscore-role-binding
   namespace: default
 subjects:
-- kind: ServiceAccount
-  name: blockscore-service-account
-  namespace: default
+  - kind: ServiceAccount
+    name: blockscore-service-account
+    namespace: default
 roleRef:
   kind: Role
   name: blockscore-role
