--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "author": "Abrar Ahmed",
     "license": "ISC",
     "devDependencies": {
+        "@eslint/js": "^9.39.1",
+        "@typescript-eslint/eslint-plugin": "^8.47.0",
+        "@typescript-eslint/parser": "^8.47.0",
+        "eslint": "^9.39.1",
+        "eslint-plugin-prettier": "^5.5.4",
         "prettier": "^3.6.2",
         "prettier-plugin-solidity": "^2.2.0"
     }
