--- a/code/backend/requirements.txt
+++ b/code/backend/requirements.txt
@@ -1,3 +1,6 @@
+# Consolidated and Updated requirements.txt for BlockScore Project
+
+# Core Frameworks and Extensions
 flask==2.3.3
 flask-cors==4.0.0
 flask-sqlalchemy==3.0.5
@@ -7,24 +10,43 @@ flask-limiter==3.5.0
 flask-bcrypt==1.0.1
 marshmallow==3.20.1
 marshmallow-sqlalchemy==0.29.0
-web3>=6.0.0
-python-dotenv==1.0.0
+alembic==1.12.0
+sqlalchemy==2.0.21
+
+# Data Science and AI Models
 pandas>=2.0.0
+numpy
+scikit-learn==1.2.2  # Using version from AI models requirements
 xgboost==1.7.6
 joblib==1.3.2
-gunicorn==21.2.0
+shap
+scipy
+
+# Web3 and Blockchain
+web3>=6.0.0
+
+# Security and Authentication
+cryptography==41.0.4
+pyjwt==2.8.0
+pyotp
+qrcode
+python-dotenv==1.0.0
+
+# Testing and Development
 pytest==7.4.2
 pytest-cov==4.1.0
+psutil
+
+# Utilities and Services
+requests==2.31.0
 redis==5.0.0
 celery==5.3.2
-cryptography==41.0.4
-bcrypt==4.0.1
+gunicorn==21.2.0
 psycopg2-binary==2.9.7
 pymongo==4.5.0
-sqlalchemy==2.0.21
-alembic==1.12.0
-requests==2.31.0
-pyjwt==2.8.0
+
+# Transitive dependencies explicitly listed in original backend requirements
+bcrypt==4.0.1
 werkzeug==2.3.7
 click==8.1.7
 itsdangerous==2.1.2
