Implement updates for better performance

--- a/infrastructure/kubernetes/base/backend-deployment.yaml
+++ b/infrastructure/kubernetes/base/backend-deployment.yaml
@@ -1,9 +1,11 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
     name: blockscore-backend
     labels:
         app: blockscore-backend
+        version: v1.0.0
 spec:
     replicas: 3
     selector:
@@ -13,17 +15,23 @@ spec:
         metadata:
             labels:
                 app: blockscore-backend
+                version: v1.0.0
         spec:
             serviceAccountName: blockscore-service-account
             securityContext:
                 runAsNonRoot: true
                 runAsUser: 1000
                 fsGroup: 2000
+                seccompProfile:
+                    type: RuntimeDefault
             containers:
                 - name: backend
-                  image: blockscore/backend:latest
+                  image: blockscore/backend:1.0.0 # Use specific version tag
+                  imagePullPolicy: IfNotPresent
                   ports:
-                      - containerPort: 8080
+                      - name: http
+                        containerPort: 8080
+                        protocol: TCP
                   env:
                       - name: DATABASE_URL
                         valueFrom:
@@ -40,6 +48,31 @@ spec:
                             secretKeyRef:
                                 name: blockscore-secrets
                                 key: jwt-secret
+                      - name: NODE_ENV
+                        value: 'production'
+                  resources:
+                      requests:
+                          memory: '256Mi'
+                          cpu: '250m'
+                      limits:
+                          memory: '512Mi'
+                          cpu: '500m'
+                  livenessProbe:
+                      httpGet:
+                          path: /health
+                          port: 8080
+                      initialDelaySeconds: 30
+                      periodSeconds: 10
+                      timeoutSeconds: 5
+                      failureThreshold: 3
+                  readinessProbe:
+                      httpGet:
+                          path: /ready
+                          port: 8080
+                      initialDelaySeconds: 10
+                      periodSeconds: 5
+                      timeoutSeconds: 3
+                      failureThreshold: 3
                   securityContext:
                       allowPrivilegeEscalation: false
                       readOnlyRootFilesystem: true
@@ -48,43 +81,13 @@ spec:
                       capabilities:
                           drop:
                               - ALL
-                  resources:
-                      limits:
-                          cpu: 500m
-                          memory: 512Mi
-                      requests:
-                          cpu: 250m
-                          memory: 256Mi
-                  livenessProbe:
-                      httpGet:
-                          path: /health
-                          port: 8080
-                      initialDelaySeconds: 30
-                      periodSeconds: 10
-                  readinessProbe:
-                      httpGet:
-                          path: /ready
-                          port: 8080
-                      initialDelaySeconds: 5
-                      periodSeconds: 5
                   volumeMounts:
-                      - name: tmp-volume
+                      - name: tmp
                         mountPath: /tmp
-                      - name: var-run-volume
-                        mountPath: /var/run
+                      - name: cache
+                        mountPath: /app/cache
             volumes:
-                - name: tmp-volume
+                - name: tmp
                   emptyDir: {}
-                - name: var-run-volume
+                - name: cache
                   emptyDir: {}
-            nodeSelector:
-                kubernetes.io/os: linux
-            tolerations:
-                - key: 'node.kubernetes.io/not-ready'
-                  operator: 'Exists'
-                  effect: 'NoExecute'
-                  tolerationSeconds: 300
-                - key: 'node.kubernetes.io/unreachable'
-                  operator: 'Exists'
-                  effect: 'NoExecute'
-                  tolerationSeconds: 300
