--- a/infrastructure/ansible/roles/common/tasks/main.yml
+++ b/infrastructure/ansible/roles/common/tasks/main.yml
@@ -1,13 +1,21 @@
 ---
 # roles/common/tasks/main.yml
 - name: Update all packages
-  yum:
+  ansible.builtin.dnf:
       name: '*'
       state: latest
       update_only: yes
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int >= 8
+
+- name: Update all packages (RHEL 7 / CentOS 7)
+  ansible.builtin.yum:
+      name: '*'
+      state: latest
+      update_only: yes
+  when: ansible_os_family == "RedHat" and ansible_distribution_major_version|int < 8
 
 - name: Install common packages
-  yum:
+  ansible.builtin.package:
       name:
           - vim
           - git
@@ -20,23 +28,30 @@
       state: present
 
 - name: Set timezone
-  timezone:
+  community.general.timezone:
       name: UTC
 
-- name: Configure firewall
-  firewalld:
+- name: Ensure firewalld is installed
+  ansible.builtin.package:
+      name: firewalld
+      state: present
+  when: ansible_os_family == "RedHat"
+
+- name: Start and enable firewalld
+  ansible.builtin.systemd:
+      name: firewalld
+      state: started
+      enabled: yes
+  when: ansible_os_family == "RedHat"
+
+- name: Configure firewall services
+  ansible.posix.firewalld:
       service: '{{ item }}'
       permanent: yes
       state: enabled
+      immediate: yes
   loop:
       - http
       - https
       - ssh
-  when: ansible_os_family == "RedHat"
-
-- name: Start and enable firewalld
-  systemd:
-      name: firewalld
-      state: started
-      enabled: yes
   when: ansible_os_family == "RedHat"
