--- a/infrastructure/ci-cd/terraform-ci.yml
+++ b/infrastructure/ci-cd/terraform-ci.yml
@@ -11,24 +11,50 @@ on:
             - 'infrastructure/terraform/**'
 
 env:
-    TF_VERSION: 1.5.0
-    AWS_REGION: us-east-1
+    TF_VERSION: 1.6.0
+    AWS_REGION: us-west-2
 
 jobs:
-    terraform-validate:
-        name: Terraform Validate
+    terraform-lint:
+        name: Terraform Lint and Format
         runs-on: ubuntu-latest
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Terraform
-              uses: hashicorp/setup-terraform@v2
+              uses: hashicorp/setup-terraform@v3
               with:
                   terraform_version: ${{ env.TF_VERSION }}
 
             - name: Terraform Format Check
-              run: terraform fmt -check -recursive infrastructure/terraform/
+              run: |
+                  cd infrastructure/terraform
+                  terraform fmt -check -recursive
+
+            - name: Setup TFLint
+              uses: terraform-linters/setup-tflint@v4
+              with:
+                  tflint_version: latest
+
+            - name: Run TFLint
+              run: |
+                  cd infrastructure/terraform
+                  tflint --init
+                  tflint --recursive
+
+    terraform-validate:
+        name: Terraform Validate
+        runs-on: ubuntu-latest
+        needs: terraform-lint
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+
+            - name: Setup Terraform
+              uses: hashicorp/setup-terraform@v3
+              with:
+                  terraform_version: ${{ env.TF_VERSION }}
 
             - name: Terraform Init
               run: |
@@ -44,9 +70,12 @@ jobs:
         name: Security Scan
         runs-on: ubuntu-latest
         needs: terraform-validate
+        permissions:
+            contents: read
+            security-events: write
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Run Checkov
               id: checkov
@@ -56,12 +85,19 @@ jobs:
                   framework: terraform
                   output_format: sarif
                   output_file_path: reports/results.sarif
+                  soft_fail: true
 
             - name: Upload Checkov results to GitHub Security
-              uses: github/codeql-action/upload-sarif@v2
+              uses: github/codeql-action/upload-sarif@v3
               if: always()
               with:
                   sarif_file: reports/results.sarif
+
+            - name: Run tfsec
+              uses: aquasecurity/tfsec-action@v1.0.3
+              with:
+                  working_directory: infrastructure/terraform
+                  soft_fail: true
 
     terraform-plan:
         name: Terraform Plan
@@ -73,15 +109,15 @@ jobs:
                 environment: [dev, staging]
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Terraform
-              uses: hashicorp/setup-terraform@v2
+              uses: hashicorp/setup-terraform@v3
               with:
                   terraform_version: ${{ env.TF_VERSION }}
 
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v2
+              uses: aws-actions/configure-aws-credentials@v4
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -90,18 +126,54 @@ jobs:
             - name: Terraform Init
               run: |
                   cd infrastructure/terraform
-                  terraform init
+                  terraform init \
+                    -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
+                    -backend-config="key=blockscore/${{ matrix.environment }}/terraform.tfstate" \
+                    -backend-config="region=${{ env.AWS_REGION }}" \
+                    -backend-config="dynamodb_table=${{ secrets.TF_STATE_LOCK_TABLE }}"
 
             - name: Terraform Plan
+              id: plan
               run: |
                   cd infrastructure/terraform
-                  terraform plan -var-file="environments/${{ matrix.environment }}/terraform.tfvars" -out=tfplan-${{ matrix.environment }}
+                  terraform plan \
+                    -var-file="environments/${{ matrix.environment }}/terraform.tfvars" \
+                    -var="db_password=${{ secrets.DB_PASSWORD }}" \
+                    -out=tfplan-${{ matrix.environment }} \
+                    -no-color
+              continue-on-error: true
+
+            - name: Comment PR with Plan
+              uses: actions/github-script@v7
+              if: github.event_name == 'pull_request'
+              env:
+                  PLAN: "terraform\n${{ steps.plan.outputs.stdout }}"
+              with:
+                  github-token: ${{ secrets.GITHUB_TOKEN }}
+                  script: |
+                      const output = `#### Terraform Plan 📖 - ${{ matrix.environment }}
+
+                      <details><summary>Show Plan</summary>
+
+                      \`\`\`\n
+                      ${process.env.PLAN}
+                      \`\`\`
+
+                      </details>`;
+
+                      github.rest.issues.createComment({
+                        issue_number: context.issue.number,
+                        owner: context.repo.owner,
+                        repo: context.repo.repo,
+                        body: output
+                      })
 
             - name: Upload Plan Artifact
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
                   name: tfplan-${{ matrix.environment }}
                   path: infrastructure/terraform/tfplan-${{ matrix.environment }}
+                  retention-days: 5
 
     terraform-apply:
         name: Terraform Apply
@@ -111,18 +183,19 @@ jobs:
         strategy:
             matrix:
                 environment: [dev, staging]
+            max-parallel: 1
         environment: ${{ matrix.environment }}
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Terraform
-              uses: hashicorp/setup-terraform@v2
+              uses: hashicorp/setup-terraform@v3
               with:
                   terraform_version: ${{ env.TF_VERSION }}
 
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v2
+              uses: aws-actions/configure-aws-credentials@v4
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -131,12 +204,19 @@ jobs:
             - name: Terraform Init
               run: |
                   cd infrastructure/terraform
-                  terraform init
+                  terraform init \
+                    -backend-config="bucket=${{ secrets.TF_STATE_BUCKET }}" \
+                    -backend-config="key=blockscore/${{ matrix.environment }}/terraform.tfstate" \
+                    -backend-config="region=${{ env.AWS_REGION }}" \
+                    -backend-config="dynamodb_table=${{ secrets.TF_STATE_LOCK_TABLE }}"
 
             - name: Terraform Apply
               run: |
                   cd infrastructure/terraform
-                  terraform apply -var-file="environments/${{ matrix.environment }}/terraform.tfvars" -auto-approve
+                  terraform apply \
+                    -var-file="environments/${{ matrix.environment }}/terraform.tfvars" \
+                    -var="db_password=${{ secrets.DB_PASSWORD }}" \
+                    -auto-approve
 
     terraform-apply-prod:
         name: Terraform Apply Production
@@ -146,15 +226,15 @@ jobs:
         environment: production
         steps:
             - name: Checkout
-              uses: actions/checkout@v3
+              uses: actions/checkout@v4
 
             - name: Setup Terraform
-              uses: hashicorp/setup-terraform@v2
+              uses: hashicorp/setup-terraform@v3
               with:
                   terraform_version: ${{ env.TF_VERSION }}
 
             - name: Configure AWS credentials
-              uses: aws-actions/configure-aws-credentials@v2
+              uses: aws-actions/configure-aws-credentials@v4
               with:
                   aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID_PROD }}
                   aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY_PROD }}
@@ -163,12 +243,19 @@ jobs:
             - name: Terraform Init
               run: |
                   cd infrastructure/terraform
-                  terraform init
+                  terraform init \
+                    -backend-config="bucket=${{ secrets.TF_STATE_BUCKET_PROD }}" \
+                    -backend-config="key=blockscore/prod/terraform.tfstate" \
+                    -backend-config="region=${{ env.AWS_REGION }}" \
+                    -backend-config="dynamodb_table=${{ secrets.TF_STATE_LOCK_TABLE_PROD }}"
 
             - name: Terraform Plan
               run: |
                   cd infrastructure/terraform
-                  terraform plan -var-file="environments/prod/terraform.tfvars" -out=tfplan-prod
+                  terraform plan \
+                    -var-file="environments/prod/terraform.tfvars" \
+                    -var="db_password=${{ secrets.DB_PASSWORD_PROD }}" \
+                    -out=tfplan-prod
 
             - name: Manual Approval Required
               uses: trstringer/manual-approval@v1
