--- a/infrastructure/kubernetes/base/ingress.yaml
+++ b/infrastructure/kubernetes/base/ingress.yaml
@@ -1,31 +1,33 @@
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-    name: '{{ .Values.appName }}-ingress'
+    name: blockscore-ingress
     annotations:
-        kubernetes.io/ingress.class: '{{ .Values.ingress.class }}'
-        nginx.ingress.kubernetes.io/ssl-redirect: '{{ .Values.ingress.sslRedirect }}'
-        cert-manager.io/cluster-issuer: '{{ .Values.ingress.certManager.issuer }}'
+        nginx.ingress.kubernetes.io/ssl-redirect: 'true'
+        cert-manager.io/cluster-issuer: 'letsencrypt-prod'
+        nginx.ingress.kubernetes.io/rate-limit: '100'
 spec:
+    ingressClassName: nginx
     tls:
         - hosts:
-              - '{{ .Values.ingress.host }}'
-          secretName: '{{ .Values.appName }}-tls'
+              - blockscore.example.com
+          secretName: blockscore-tls
     rules:
-        - host: '{{ .Values.ingress.host }}'
+        - host: blockscore.example.com
           http:
               paths:
                   - path: /api
                     pathType: Prefix
                     backend:
                         service:
-                            name: '{{ .Values.appName }}-backend'
+                            name: blockscore-backend
                             port:
-                                number: { { .Values.backend.servicePort } }
+                                number: 8080
                   - path: /
                     pathType: Prefix
                     backend:
                         service:
-                            name: '{{ .Values.appName }}-frontend'
+                            name: blockscore-frontend
                             port:
-                                number: { { .Values.frontend.servicePort } }
+                                number: 80
