--- a/infrastructure/kubernetes/base/backend-deployment.yaml
+++ b/infrastructure/kubernetes/base/backend-deployment.yaml
@@ -49,14 +49,14 @@ spec:
                   name: blockscore-secrets
                   key: jwt-secret
             - name: NODE_ENV
-              value: 'production'
+              value: "production"
           resources:
             requests:
-              memory: '256Mi'
-              cpu: '250m'
+              memory: "256Mi"
+              cpu: "250m"
             limits:
-              memory: '512Mi'
-              cpu: '500m'
+              memory: "512Mi"
+              cpu: "500m"
           livenessProbe:
             httpGet:
               path: /health
