--- a/infrastructure/kubernetes/base/ingress.yaml
+++ b/infrastructure/kubernetes/base/ingress.yaml
@@ -4,9 +4,9 @@ kind: Ingress
 metadata:
   name: blockscore-ingress
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
-    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
-    nginx.ingress.kubernetes.io/rate-limit: '100'
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    nginx.ingress.kubernetes.io/rate-limit: "100"
 spec:
   ingressClassName: nginx
   tls:
