--- a/infrastructure/ansible/inventory/hosts.example.yml
+++ b/infrastructure/ansible/inventory/hosts.example.yml
@@ -7,14 +7,14 @@ all:
     webservers:
       hosts:
         web1:
-          ansible_host: '10.0.1.10' # Replace with your web server IP
+          ansible_host: "10.0.1.10" # Replace with your web server IP
         web2:
-          ansible_host: '10.0.1.11' # Replace with your web server IP
+          ansible_host: "10.0.1.11" # Replace with your web server IP
     databases:
       hosts:
         db1:
-          ansible_host: '10.0.4.10' # Replace with your database IP
+          ansible_host: "10.0.4.10" # Replace with your database IP
   vars:
     ansible_user: ec2-user
-    ansible_ssh_private_key_file: '~/.ssh/blockscore-key.pem' # Replace with your key path
+    ansible_ssh_private_key_file: "~/.ssh/blockscore-key.pem" # Replace with your key path
     ansible_python_interpreter: /usr/bin/python3
