--- a/infrastructure/kubernetes/base/app-secrets.example.yaml
+++ b/infrastructure/kubernetes/base/app-secrets.example.yaml
@@ -5,12 +5,12 @@ metadata:
   name: blockscore-secrets
 type: Opaque
 stringData:
-  database-url: 'postgresql://user:CHANGE_ME@postgres:5432/blockscore'
-  redis-url: 'redis://redis:6379/0'
-  jwt-secret: 'CHANGE_ME_GENERATE_STRONG_SECRET'
-  mysql-root-password: 'CHANGE_ME_ROOT_PASSWORD'
-  mysql-password: 'CHANGE_ME_USER_PASSWORD'
-  api-key: 'CHANGE_ME_API_KEY'
+  database-url: "postgresql://user:CHANGE_ME@postgres:5432/blockscore"
+  redis-url: "redis://redis:6379/0"
+  jwt-secret: "CHANGE_ME_GENERATE_STRONG_SECRET"
+  mysql-root-password: "CHANGE_ME_ROOT_PASSWORD"
+  mysql-password: "CHANGE_ME_USER_PASSWORD"
+  api-key: "CHANGE_ME_API_KEY"
 #
 # IMPORTANT: DO NOT commit this file with real secrets!
 # For production, use:
