--- a/infrastructure/kubernetes/base/backend-service.yaml
+++ b/infrastructure/kubernetes/base/backend-service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: '{{ .Values.appName }}-backend'
+  name: "{{ .Values.appName }}-backend"
   labels:
-    app: '{{ .Values.appName }}-backend'
+    app: "{{ .Values.appName }}-backend"
 spec:
   type: ClusterIP
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: '{{ .Values.appName }}-backend'
+    app: "{{ .Values.appName }}-backend"
