--- a/infrastructure/kubernetes/base/frontend-deployment.yaml
+++ b/infrastructure/kubernetes/base/frontend-deployment.yaml
@@ -2,37 +2,37 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: '{{ .Values.appName }}-frontend'
+  name: "{{ .Values.appName }}-frontend"
   labels:
-    app: '{{ .Values.appName }}-frontend'
+    app: "{{ .Values.appName }}-frontend"
 spec:
   replicas: { { .Values.frontend.replicas } }
   selector:
     matchLabels:
-      app: '{{ .Values.appName }}-frontend'
+      app: "{{ .Values.appName }}-frontend"
   template:
     metadata:
       labels:
-        app: '{{ .Values.appName }}-frontend'
+        app: "{{ .Values.appName }}-frontend"
     spec:
       containers:
-        - name: '{{ .Values.appName }}-frontend'
-          image: '{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}'
-          imagePullPolicy: '{{ .Values.frontend.image.pullPolicy }}'
+        - name: "{{ .Values.appName }}-frontend"
+          image: "{{ .Values.frontend.image.repository }}:{{ .Values.frontend.image.tag }}"
+          imagePullPolicy: "{{ .Values.frontend.image.pullPolicy }}"
           ports:
             - containerPort: { { .Values.frontend.containerPort } }
           resources:
             limits:
-              cpu: '{{ .Values.frontend.resources.limits.cpu }}'
-              memory: '{{ .Values.frontend.resources.limits.memory }}'
+              cpu: "{{ .Values.frontend.resources.limits.cpu }}"
+              memory: "{{ .Values.frontend.resources.limits.memory }}"
             requests:
-              cpu: '{{ .Values.frontend.resources.requests.cpu }}'
-              memory: '{{ .Values.frontend.resources.requests.memory }}'
+              cpu: "{{ .Values.frontend.resources.requests.cpu }}"
+              memory: "{{ .Values.frontend.resources.requests.memory }}"
           env:
             - name: REACT_APP_API_URL
-              value: '{{ .Values.frontend.apiUrl }}'
+              value: "{{ .Values.frontend.apiUrl }}"
             - name: REACT_APP_ENV
-              value: '{{ .Values.environment }}'
+              value: "{{ .Values.environment }}"
           livenessProbe:
             httpGet:
               path: /
@@ -46,4 +46,4 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 5
       imagePullSecrets:
-        - name: '{{ .Values.imagePullSecrets }}'
+        - name: "{{ .Values.imagePullSecrets }}"
