--- a/infrastructure/kubernetes/base/redis-service.yaml
+++ b/infrastructure/kubernetes/base/redis-service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: '{{ .Values.appName }}-redis'
+  name: "{{ .Values.appName }}-redis"
   labels:
-    app: '{{ .Values.appName }}-redis'
+    app: "{{ .Values.appName }}-redis"
 spec:
   type: ClusterIP
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: redis
   selector:
-    app: '{{ .Values.appName }}-redis'
+    app: "{{ .Values.appName }}-redis"
