--- a/infrastructure/kubernetes/environments/dev/values.yaml
+++ b/infrastructure/kubernetes/environments/dev/values.yaml
@@ -88,7 +88,7 @@ redis:
 ingress:
   host: dev.blockscore.example.com
   class: nginx
-  sslRedirect: 'true'
+  sslRedirect: "true"
   certManager:
     issuer: letsencrypt-staging
 
