--- a/infrastructure/kubernetes/environments/prod/values.yaml
+++ b/infrastructure/kubernetes/environments/prod/values.yaml
@@ -88,7 +88,7 @@ redis:
 ingress:
   host: blockscore.example.com
   class: nginx
-  sslRedirect: 'true'
+  sslRedirect: "true"
   certManager:
     issuer: letsencrypt-prod
 
